# backend/api/api.bm.go
@@ -1,12 +1,12 @@
 // Code generated by protoc-gen-bm v0.1, DO NOT EDIT.
-// source: backend/api/api.proto
+// source: api.proto
 
 /*
 Package api is a generated blademaster stub package.
 This code was generated with kratos/tool/protobuf/protoc-gen-bm v0.1.
 
 It is generated from these files:
-	backend/api/api.proto
+	api.proto
 */
 package api
 
@@ -27,9 +27,10 @@ var PathBackendManagerModelsDelete = "/backend-dashboard/backend/models.delete"
 var PathBackendManagerModelsUpdate = "/backend-dashboard/backend/models.update"
 var PathBackendManagerModelsSelectAll = "/backend-dashboard/backend/models.selectAll"
 var PathBackendManagerModelsSelectByName = "/backend-dashboard/backend/models.selectByName"
-var PathBackendManagerLinkInsert = "/backend-dashboard/backend/links.insert"
-var PathBackendManagerLinkSelectAll = "/backend-dashboard/backend/links.selectAll"
+var PathBackendManagerLinksInsert = "/backend-dashboard/backend/links.insert"
+var PathBackendManagerLinksSelectAll = "/backend-dashboard/backend/links.selectAll"
 var PathBackendManagerLinksDeleteBySymbol = "/backend-dashboard/backend/links.deleteBySymbol"
+var PathBackendManagerApisSelectAll = "/backend-dashboard/backend/apis.selectAll"
 var PathBackendManagerExport = "/backend-dashboard/backend/export"
 
 // BackendManagerBMServer is the server API for BackendManager service.
@@ -44,11 +45,13 @@ type BackendManagerBMServer interface {
 
 	ModelsSelectByName(ctx context.Context, req *NameID) (resp *Model, err error)
 
-	LinkInsert(ctx context.Context, req *Link) (resp *Link, err error)
+	LinksInsert(ctx context.Context, req *Link) (resp *Link, err error)
 
-	LinkSelectAll(ctx context.Context, req *Empty) (resp *LinkArray, err error)
+	LinksSelectAll(ctx context.Context, req *Empty) (resp *LinkArray, err error)
 
 	LinksDeleteBySymbol(ctx context.Context, req *SymbolID) (resp *Link, err error)
+
+	ApisSelectAll(ctx context.Context, req *Empty) (resp *ApiInfoArray, err error)
 
 	Export(ctx context.Context, req *ExpOptions) (resp *UrlResp, err error)
 }
@@ -100,21 +103,21 @@ func backendManagerModelsSelectByName(c *bm.Context) {
 	c.JSON(resp, err)
 }
 
-func backendManagerLinkInsert(c *bm.Context) {
+func backendManagerLinksInsert(c *bm.Context) {
 	p := new(Link)
 	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
 		return
 	}
-	resp, err := BackendManagerSvc.LinkInsert(c, p)
+	resp, err := BackendManagerSvc.LinksInsert(c, p)
 	c.JSON(resp, err)
 }
 
-func backendManagerLinkSelectAll(c *bm.Context) {
+func backendManagerLinksSelectAll(c *bm.Context) {
 	p := new(Empty)
 	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
 		return
 	}
-	resp, err := BackendManagerSvc.LinkSelectAll(c, p)
+	resp, err := BackendManagerSvc.LinksSelectAll(c, p)
 	c.JSON(resp, err)
 }
 
@@ -124,6 +127,15 @@ func backendManagerLinksDeleteBySymbol(c *bm.Context) {
 		return
 	}
 	resp, err := BackendManagerSvc.LinksDeleteBySymbol(c, p)
+	c.JSON(resp, err)
+}
+
+func backendManagerApisSelectAll(c *bm.Context) {
+	p := new(Empty)
+	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
+		return
+	}
+	resp, err := BackendManagerSvc.ApisSelectAll(c, p)
 	c.JSON(resp, err)
 }
 
@@ -144,8 +156,9 @@ func RegisterBackendManagerBMServer(e *bm.Engine, server BackendManagerBMServer)
 	e.POST("/backend-dashboard/backend/models.update", backendManagerModelsUpdate)
 	e.POST("/backend-dashboard/backend/models.selectAll", backendManagerModelsSelectAll)
 	e.POST("/backend-dashboard/backend/models.selectByName", backendManagerModelsSelectByName)
-	e.POST("/backend-dashboard/backend/links.insert", backendManagerLinkInsert)
-	e.POST("/backend-dashboard/backend/links.selectAll", backendManagerLinkSelectAll)
+	e.POST("/backend-dashboard/backend/links.insert", backendManagerLinksInsert)
+	e.POST("/backend-dashboard/backend/links.selectAll", backendManagerLinksSelectAll)
 	e.POST("/backend-dashboard/backend/links.deleteBySymbol", backendManagerLinksDeleteBySymbol)
+	e.POST("/backend-dashboard/backend/apis.selectAll", backendManagerApisSelectAll)
 	e.POST("/backend-dashboard/backend/export", backendManagerExport)
 }
